feat: refine animation for smoother gameplay
- Improved animation transitions for a more fluid and natural experience

--- a/style.css
+++ b/style.css
@@ -138,8 +138,9 @@ button.icon.s-icon {
     transform: none;
   }
 
-  90% {
+  95% {
     transform: rotate(var(--turn));
+    animation-timing-function: ease-in;
   }
 }
 
