--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
   --bg: #181414;
-  --white: #fff;
+  --white: #fbfafa;
   --green: #6edf55;
 }
 
@@ -198,4 +198,16 @@ button.icon.s-icon {
   .play-icons {
     column-gap: 1rem;
   }
+}
+
+
+.signature {
+  font-size: 0.75rem;
+  font-weight: 200;
+  text-align: center;
+  margin-top: 2rem;
+}
+
+.signature a {
+  color: inherit;
 }
